component/basic-deployments/module/cluster-monitoring/manifest/grafana/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: grafana
spec:
  ports:
    - targetPort: 3000
      port: 3000
  selector:
    app: grafana

---
