component/basic-deployments/module/cluster-monitoring/manifest/grafana/ingress.yaml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: grafana-ingress
      hosts:
        - metrics.${domain_name}
  rules:
    - host: metrics.${domain_name}
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000

---
